		 configuration. (work item 19502)
		-[Integration.Web.Forms] ASP.NET Web Forms integration added. (work item 19510)

	Bug fixes:
		-[Core] Properties where not injected when a single instance was registered using RegisterSingle<T>(T),
		 although any initializers (registered through RegisterInitializer<T>(Action<T>) did fire. 
		 (work item 19513)


Version v2.1.0 (v2.1 RTM) 2013-03-19
	General description:
		This minor release adds two new features: A new extension point has been added that makes it 
		considerably easier to auto-wire properties; A new diagnostic warning has been added that searches the
		configuration for components with too many dependencies, because they can cause maintainability issues.
	
	New features:
		-[Core] IPropertySelectionBehavior interface added to allow users to override the default behavior
		 (which is to not inject any properties). The default behaviour can be changed by replacing the
		 Container.Options.PropertySelectionBehavior property. (work item 19389)
		-[Core] New warning added in the Diagnostic Services to warn about classes with too many dependencies.
		 (work item 19428)

	Bug fixes:
		-[Core] Register<TService, TImplementation>(Lifestyle) did not verify whether TImplementation was a
		 constructable type (in the default configuration this means that it is concrete, has one constructor,
		 and no primitive constructor arguments). This resulted in a failure during when resolving the
		 instance, but this was later than needed. (work item 19464)


Version v2.0.2 (v2.0.2 RTM) 2013-03-10
	General description:
		This release fixes a bug with the Visual Studio Debug View.

	Bug fixes:
		-[Core] Diagnostic Services fail when grouping generic types that have a generic type constraint.
		 (work item 19449)


Version v2.0.1 (v2.0.1 RTM) 2013-02-28
	General description:
		This release fixes a few small bugs.

	Bug fixes:
		-[Core] Custom KnownDependency instances that where added during the interception (ExpressionBuilding)